# askfaro-embedded-search

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
askfaro_embedded_search/: __init__.py  embedder.py  errors.py  index.py  sync.py  types.py
askfaro_embedded_search/backends/: base.py
faro_embedded_search/: __init__.py  errors.py  index.py  sync.py  types.py
faro_embedded_search/backends/: base.py  postgres.py  sqlite.py
faro_search/: __init__.py  embedder.py  fusion.py  index.py  registry.py  types.py
faro_search/backends/: __init__.py  postgres.py
legacy-shim/: README.md  pyproject.toml
legacy-shim/faro_embedded_search/: __init__.py
tests/: conftest.py  test_errors.py  test_fusion.py  test_parity.py  test_postgres.py  test_sqlite.py
