[project]
name = "faro-embedded-search"
version = "0.2.0"
description = "Incremental hybrid retrieval (lexical + vector, RRF-fused) with identical semantics on server Postgres and on-device SQLite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Faro" }]
keywords = ["search", "retrieval", "rag", "on-device", "sqlite", "pgvector", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/poolside-ventures/faro-embedded-search"
Repository = "https://github.com/poolside-ventures/faro-embedded-search"
Issues = "https://github.com/poolside-ventures/faro-embedded-search/issues"
Changelog = "https://github.com/poolside-ventures/faro-embedded-search/blob/main/CHANGELOG.md"

[project.optional-dependencies]
postgres = ["sqlalchemy[asyncio]>=2.0.36", "asyncpg>=0.30.0"]
http = ["httpx>=0.27"]
numpy = ["numpy>=1.26"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["faro_embedded_search"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
