[project]
# Final release of the OLD distribution name. It contains no real code: it just
# depends on the renamed package and re-exports it (see the shim __init__).
# Renamed to askfaro-embedded-search as of 0.5.0.
name = "faro-embedded-search"
version = "0.4.1"
description = "Deprecated: renamed to askfaro-embedded-search. This is a compatibility shim that re-exports it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Faro" }]
classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["askfaro-embedded-search>=0.5.0"]

[project.urls]
Homepage = "https://github.com/poolside-ventures/askfaro-embedded-search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["faro_embedded_search"]
